added the paragraph

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIRST GITHUB REPO</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
         <h1>DORAEMON</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste ipsam velit nobis neque similique sit dolores, quia corrupti? Veniam dolorum sint quod ipsum adipisci quam distinctio a sunt incidunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quaerat praesentium totam expedita saepe error rerum qui, odit exercitationem ut quae. Odit, itaque soluta hic dolores debitis laborum accusamus laudantium voluptatem eligendi consectetur consequatur, illo harum minima. Esse dolores officiis repudiandae nam vel reiciendis similique facere! Commodi repudiandae ipsum doloremque.</p>
     </div>
 </body>
 </html>
