added sticky nav

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li> Sale </li>
         </ul>
     </marquee>-->
+    <!--This is a header section-->
     <div class="display">
         <div class="header">
             <img src="####" class="khushi">
@@ -110,6 +111,7 @@
             </div>
         </div>
     </div>
+    <!--this is a body section-->
     <section class="bdy">
         <div>
             <img class="freedl" src="img/ADD.jpg" >
